--- a/1.Jigsaw/style.css
+++ b/1.Jigsaw/style.css
@@ -48,8 +48,7 @@ body {
     
   }
  tr, td {
-    border: 1px solid black;
-    width: 100px;
-    height: 100px;
+    border: 1px solid rgb(211, 139, 139);
+   
   }
 
